Update index.html to spanish

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div>
-        <h1 id="title">The Tetromino Game</h1>
+        <h1 id="title">Juego Casi-Tetris</h1>
     </div>
 
-    <h3>Score: <span id="score">0</span></h3>
-    <button id="start-button">Start/Pause</button>
+    <h3>Puntaje: <span id="score">0</span></h3>
+    <button id="start-button">Empieza/Pausa</button>
 
 
     <div class="container">
