--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" charset="UTF-8"></script>
     <link rel="stylesheet" href="style.css"></link>
-    <title>Basic Tetris Game</title>
+    <title>Casi-Tetris</title>
 </head>
 <body>
     <div>
